tests/ui/consts/const_in_pattern/incomplete-slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` and `&[_, _, ..]` not covered
  --> $DIR/incomplete-slice.rs:9:11
   |
LL |     match &[][..] {
   |           ^^^^^^^ patterns `&[]` and `&[_, _, ..]` not covered
   |
   = note: the matched value is of type `&[E]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         E_SL => {},
LL +         &[] | &[_, _, ..] => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
